[@etecture/rex] Scrollbar: fixes #1 by properly updating scrollbars on children changes

--- a/core/src/components/Scrollbar/Scrollbar.module.css
+++ b/core/src/components/Scrollbar/Scrollbar.module.css
@@ -6,7 +6,7 @@
     max-height: 100%;
     box-sizing: border-box;
 
-    & .content {
+    & .viewport {
       height: 100%;
       box-sizing: border-box;
       overflow: auto;
@@ -61,6 +61,10 @@
         background: var(--rex-scrollbar-thumb-color, rgba(0, 0, 0, 0.8));
         opacity: var(--rex-scrollbar-thumb-opacity, 0.5);
         border-radius: 10px;
+
+        &:active {
+          background: var(--rex-scrollbar-active-thumb-color, rgba(0, 0, 0, 0.95));
+        }
       }
     }
 
